# CC-Python-version

./: .cursorrules  .gitignore  DEPLOYMENT_TEST_REPORT.md  MANUAL_DEPLOYMENT_STEPS.txt  deploy_seed_data.py  deploy_seed_via_http.py  grant_permissions.sql  push_db.py
content-pipeline/: .env.example  pyproject.toml
content-pipeline/content_pipeline/: __init__.py  exceptions.py  main.py
content-pipeline/cursor_docs/: 00_KICKOFF.md  01_PHASE_1_Foundation.md  02_PHASE_2_Parsing.md  03_5_PHASE_3_Step_3_5_Stage_Contracts.md  03_PHASE_3_4_Onboarding_RunInit.md  04_PHASE_3_4_COMPLETION_SUMMARY.md  04_PHASE_5_7_Stages.md  05_PHASE_4_Step_4_1_ClientContextAssembler.md  05_PHASE_8_9_Launch.md  06_PHASE_4_Step_4_2_RunInit_FINAL_DESIGN.md  06_PHASE_4_Step_4_2_RunInit_PROPOSAL.md  07_PHASE_4_SUPABASE_SEED_DATA.md  08_IMPLEMENTATION_TEST_RESULTS.md  09_IMPLEMENTATION_FINAL_SUMMARY.md  NEW_PROJECT_SETUP.md  QUICK_REFERENCE.md
content-pipeline/docs/: BUILD_GUIDE.md  REFERENCE.md
content-pipeline/reference_run/: 00_Stage_1_Handoff_Brief.md  01_Research_Dossier.md  01_Stage_2_Handoff.md  02_Content_Brief.md  02_Stage_3_Handoff.md  03_First_Draft.md  03_Stage_4_Handoff.md  04_Humanized_Draft.md  04_Stage_5_Handoff.md  05_SEO_Draft.md  05_Stage_6_Handoff.md  06_QA_Approved_Draft.md  06_QA_Signoff.md  06_Stage_7_Handoff.md  07_Blog_Final.html  Run_Log.md
content-pipeline/supabase/: manual_insert_test_client.sql  seed_data.sql
content-pipeline/tests/: conftest.py  test_brand_colors.py  test_domain.py  test_llm.py  test_parsers.py  test_repositories.py
frontend/: package-lock.json
(+101 files in other folders)
